// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders "Heading" with color prop 1`] = `
<h1
  class="sc-bdVaJa gIEXBz"
>
  Heading
</h1>
`;

exports[`renders "Heading" with large size 1`] = `
<h1
  class="sc-bdVaJa bluQvN"
>
  Heading
</h1>
`;

exports[`renders "Heading" with no props 1`] = `
<h1
  class="sc-bdVaJa cmdThp"
>
  Heading
</h1>
`;

exports[`renders "Heading" with small size 1`] = `
<h1
  class="sc-bdVaJa TtggM"
>
  Heading
</h1>
`;

exports[`renders "Heading" with text align 1`] = `
<h1
  class="sc-bdVaJa ggFWVx"
>
  Heading
</h1>
`;
